<resources>
    <!-- Name for the application (AndroidManifest)-->
    <string name="app_name">Cookiary</string>

    <!-- Description for the thumbnail of a dish (list_item)-->
    <string name="list_item_img_content_desc" translatable="false">The thumbnail of the dish</string>

    <!-- Title for the activity to show a recipe detail (DetailActivity) -->
    <string name="detail_activity_title_recipe_detail">Recipe Detail</string>

    <!-- Title for the activity to update a recipe (UpdateDetailActivity) -->
    <string name="update_activity_title">Edit the recipe</string>

    <!-- Title for the activity to create a new recipe (CreateNewRecipe)-->
    <string name="create_new_recipe_activity_title">Add a recipe</string>

    <!-- Prompt message for no data (MainActivity) -->
    <string name="no_data_history">Time to add a recipe!</string>

    <!-- Label for overflow menu option that edit the recipe detail -->
    <string name="action_edit_detail">Edit</string>

    <!-- Label for overflow menu option that insert dummy data to the database -->
    <string name="action_insert_dummy_data" translatable="false">Insert Dummy Data</string>

    <!-- Label for overflow menu option that insert dummy ingredients in the recipeDetail -->
    <string name="action_insert_dummy_details" translatable="false">Insert Dummy Details</string>

    <!-- Label for overflow menu option that delete the recipe in the recipeDetail -->
    <string name="action_delete_recipe">Delete This Recipe</string>

    <!-- Label for overflow menu option that share the recipe in the recipeDetail -->
    <string name="action_share_recipe">Share This Recipe</string>

    <!-- Label for overflow menu option that search for the recipes -->
    <string name="action_search">Search</string>

    <!-- Label for overflow menu option that save the input data -->
    <string name="action_save">Save</string>

    <!-- Label for overview category of attributes -->
    <string name="category_overview">Overview</string>

    <!-- Label for information of ingredients -->
    <string name="category_ingredients">Ingredients</string>

    <!-- Label for information of directions -->
    <string name="category_directions">Directions</string>

    <!-- Text for the button to create a new recipe -->
    <string name="create">create</string>

    <!-- Text for no_ingredient_text_view in detail content -->
    <string name="no_ingredient_text_view">No Ingredients!</string>

    <!-- Text for no_direction_text_view in detail content -->
    <string name="no_direction_text_view">No Directions!</string>

    <!-- Text for the title of directions -->
    <string name="direction_title_step">Step</string>

    <!-- Text hint for name required field  -->
    <string name="name_required">Name*</string>

    <!-- Text hint for name field  -->
    <string name="name">Name</string>

    <!-- Text hint for description field  -->
    <string name="description">Description</string>

    <!-- Text hint for category field  -->
    <string name="category">Category</string>

    <!-- Text hint for time field  -->
    <string name="time">Cooking Time</string>

    <!-- Text hint for servings field  -->
    <string name="yield">Yield</string>

    <!-- Text label for servings field  -->
    <string name="servings">servings</string>

    <!-- Text hint for difficulty field  -->
    <string name="difficulty">Difficulty</string>

    <!-- Text hint for ingredient field  -->
    <string name="ingredient">Ingredient</string>

    <!-- Text hint for direction field  -->
    <string name="direction">Direction</string>

    <!-- Text label for add ingredients button  -->
    <string name="add_ingredients">add ingredients</string>

    <!-- Text label for add directions button  -->
    <string name="add_directions">add directions</string>

    <!-- Name of transition -->
    <string name="my_activity_transition" translatable="false">my_activity_transition</string>

    <!-- Text for recycler swipe -->
    <string name="delete">DELETE</string>

    <!-- Text hint for search widget  -->
    <string name="search_hint">Type name or category…</string>

    <!-- Text for category array -->
    <string name="category_beverage">Beverage</string>
    <string name="category_breakfast">Breakfast</string>
    <string name="category_dessert">Dessert</string>
    <string name="category_maindish">Main Dish</string>
    <string name="category_salad">Salad</string>
    <string name="category_snack">Snack</string>
    <string name="category_soup">Soup</string>

    <!-- Text for measurement array -->
    <string name="measurement_tspn">teaspoon</string>
    <string name="measurement_tbspn">tablespoon</string>
    <string name="measurement_cup">cup</string>
    <string name="measurement_oz">oz</string>
    <string name="measurement_unit">unit</string>

    <!-- Dummy data for inserting dummy details -->
    <string name="dummy_recipe_name" translatable="false">Burger</string>
    <string name="dummy_cooking_time" translatable="false">1 Hour 30 Minutes</string>
    <string name="dummy_yield" translatable="false">4</string>
    <string name="dummy_difficulty" translatable="false">Easy</string>
    <string name="dummy_description" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</string>




</resources>
