<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity">

    <item android:id="@+id/action_share"
        android:title="@string/action_share_recipe"
        android:icon="@drawable/ic_share_recipe"
        app:showAsAction="ifRoom" />


    <item android:id="@+id/action_edit"
        android:title="@string/action_edit_detail"
        android:icon="@drawable/ic_edit_recipe"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete_recipe"
        android:title="@string/action_delete_recipe"
        android:icon="@drawable/ic_delete_recipe"
        app:showAsAction="never" />

    <item android:id="@+id/action_insert_dummy_details"
        android:title="@string/action_insert_dummy_details"
        app:showAsAction="never" />


</menu>