<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ccl.Cookiary.UpdateDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="4dp"
                android:paddingStart="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_recipe_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/name_required"
                    android:inputType="textCapWords" />

                <!-- time field -->
                <EditText
                    android:id="@+id/edit_recipe_time"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/time"
                    android:inputType="textCapWords" />

                <!-- Servings field -->
                <EditText
                    android:id="@+id/edit_recipe_servings"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/servings"
                    android:inputType="number" />

                <!-- Difficulty field -->
                <EditText
                    android:id="@+id/edit_recipe_difficulty"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/difficulty"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <!-- Ingredients category -->
        <LinearLayout
            android:id="@+id/container_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_ingredients" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="4dp"
                android:paddingStart="4dp">

                <!-- Ingredient1 field -->
                <EditText
                    android:id="@+id/edit_ingredient_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/ingredient"
                    android:inputType="textCapWords" />

                <!-- Units drop-down spinner -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_ingredient_quantity"
                        style="@style/EditorFieldStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="1"
                        android:inputType="number" />

                    <Spinner
                        android:id="@+id/spinner_ingredient_unit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Directions category -->
        <LinearLayout
            android:id="@+id/container_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_directions" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="4dp"
                android:paddingStart="4dp">

                <!-- Step1 field -->
                <EditText
                    android:id="@+id/edit_recipe_step1"
                    style="@style/EditorFieldStyle"
                    android:hint="Step1"
                    android:inputType="textMultiLine"
                    android:enabled="false"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>